// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should renders component with default props 1`] = `
<div
  className="mfui-container mfui-container_bg-color_default"
>
  <ContentArea>
    <TitleDescriptionBox
      title="title"
    />
  </ContentArea>
</div>
`;

exports[`Container should renders component with optional props 1`] = `
<div
  className="mfui-container mfui-container_bg-color_green mfui-container_disable-padding-top mfui-container_disable-padding-bottom className"
  id="id"
>
  <ContentArea>
    <TitleDescriptionBox
      title="title"
    />
  </ContentArea>
</div>
`;
